src/test/deca/context/invalid/classextends10.deca
class B{}


class A extends B{}

class A{}

